# Rapid-LLM

./: .gitignore  .gitmodules  AGENTS.md  LLM_execution.py  LLM_util.py  MLA_CODE_VALIDATION.md  MLA_FIX_PLAN.md  MOE_ONE_HOT_EXPERT_MODEL.md  RAPIDLLM_WEBUI_REMOTE.md  README.md  TODO_11_3_2025.md  astrasim_lib.md  base_timing.py  config.py  debug_astra_vs_analytical.sh  debug_perf.sh  deviceMapping.py  gemm_calc.py  graphviz_async.py  hw_component.py  inference_timing.py  launch_webui.sh  llm_execution.py  llm_util.py  main.py  memory_estimation.py  model.py  parallelism.py  pyproject.toml  requirements.txt  run_perf.py  session_summary.md  simulate.py  simulate_LLM.py  simulate_inf.py  simulate_inference_graph.py  simulate_train_graph.py  tile.py  time_calculation.py  time_calculation_LLM.py  (+4 more)
astrasim_lib/: __init__.py  bootstrap.py  config_generation.py  et_utils.py  executor.py  gmap.py  graph_debug.py  integration.py
deprecated/: GD_search.py
energy/: bucketize_ncu_by_cpu_op.py  compile_combined_mm_energy.py  mem_accesses.py
examples/: gemm.sh  korthi.sh  llm.sh  llm_astra.sh  llm_astra_inference.sh  llm_astra_inference_debug_graphviz.sh  llm_astra_moe.sh  llm_astra_moe_inference.sh  llm_inference.sh  lstm.sh  problem.sh
rapid_llm/: __init__.py  __main__.py  cli.py
scripts/: install_w_pip.sh  install_w_uv.sh
tests/: conftest.py  test_IMEC_A100_no_network.py  test_IMEC_H100_no_network.py  test_IMEC_inf.py  test_IMEC_inf_no_network.py  test_IMEC_train.py  test_deepseek_v3_config.py  test_func_test.py  test_koyeb_validation.py  test_mla_modeling.py  (+7 more)
(+348 files in other folders)
