[project]
name = "rapid-llm"
version = "0.1.0"
description = "RAPID-LLM simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.1.8",
    "dash>=4.1.0",
    "dash-ag-grid>=35.2.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.6.1",
    "graphviz>=0.21",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy==2.3.3",
    "pandas==2.3.1",
    "playwright>=1.58.0",
    "plotly>=6.7.0",
    "protobuf==5.28.2",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pydot>=3.0.0",
    "pytest>=9.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "scotchpy64>=1.0.1",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "tqdm>=4.67.1",
    "tzdata==2025.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "webui_browser: launches the Dash web UI and checks browser layout/aesthetic health",
]
